--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,6 @@
     "angular-route": "1.2.x",
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.15",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
   }
 }
