--- a/bower.json
+++ b/bower.json
@@ -9,9 +9,7 @@
     "angular-route": "1.2.x",
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.15",
-    "bootstrap": "~3.1.1",
-  },
-  "resolutions": {
-    "angular": "1.2.x"
+    "angular-cookies": "~1.2.x",
+    "bootstrap": "~3.1.1"
   }
 }
