--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
     "angular": "1.2.x",
     "angular-route": "1.2.x",
     "angular-loader": "1.2.x",
-    "angular-cookies": "~1.2.x",
+    "angular-local-storage": "~0.0.7",
     "bootstrap": "~3.1.1"
   }
 }
