--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   },
   "scripts": {
     "postinstall": "bower install",
-    "start": "http-server -p 8000",
+    "start": "http-server -p 8000"
   }
 }
